# sounder

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  dev-launch.sh  electron-builder.yml  entitlements-child.plist  entitlements.plist  package-lock.json  package.json
native/: CMakeLists.txt
native/include/: AudioGraph.h  AudioTrack.h  BasicSynth.h  BeatQuantizer.h  BuiltInEffect.h  BuiltInInstrument.h  BusTrack.h  DrumKit.h  FileIO.h  MeterData.h  Metronome.h  MidiGenerator.h  MidiInputManager.h  MidiTrack.h  OfflineRenderer.h  PluginHost.h  SFZInstrument.h  SamplePlayer.h  SounderEngine.h  StemSeparator.h  TransportEngine.h
native/include/pluginterfaces/vst2.x/: aeffect.h  aeffectx.h
native/src/: AudioGraph.cpp  AudioTrack.cpp  BasicSynth.cpp  BeatQuantizer.cpp  BuiltInEffect.cpp  BusTrack.cpp  DrumKit.cpp  FileIO.cpp  Metronome.cpp  MicPermission.mm  MidiGenerator.cpp  MidiInputManager.cpp  MidiTrack.cpp  OfflineRenderer.cpp  PluginHost.cpp  SFZInstrument.cpp  SamplePlayer.cpp  SounderEngine.cpp  StemSeparator.cpp  TransportEngine.cpp
resources/: entitlements.mac.plist  icon.icns
resources/models/musicgen-small/: config.json  generation_config.json
scripts/: codesign-electron.js  download-models.js  notarize.js
src/main/: ai-worker.js  aiAudioEngine.js  main.js  menu.js  scan-worker.js
src/preload/: preload.js
src/renderer/: index.html  mixer-board.js  piano-roll.js  renderer.js  styles.css  undo-manager.js
